--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
 	},
 	"keywords": [],
 	"author": "",
+	"engines": {
+		"node": "12.16.3"
+	},
 	"license": "ISC",
 	"dependencies": {
 		"body-parser": "^1.19.0",
